linux (4.9.2-2~bpo8+1) UNRELEASED; urgency=medium

  * Rebuild for jessie-backports:
    - Revert changes to use gcc-6 compiler, not found in Jessie.
    - Bump ABI to 0.bpo.1
    - Revert changes to flex and asciidoc build-depdencies
    - linux-image-dbg: Revert changes to packaging of debug symbols, as new-
      style dbgsym packages are not properly supported in jessie-backports

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2017 18:14:08 +0000

linux (4.9.2-2) unstable; urgency=medium

  * [sparc64] Export memcpy and memset to modules again (fixes FTBFS)
  * Revert "Remove debug symbol packages from debian/control to work around dak
    bug", which caused most binary uploads to be rejected

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 12 Jan 2017 15:52:37 +0000

linux (4.9.2-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.9.2

  [ Ben Hutchings ]
  * abiupdate.py: Use current config instead of downloading previous config
  * abiupdate.py: Update base URLs
  * abiupdate.py: Add support for incoming.ports.debian.org
  * Make the pickled config (config.defines.dump) reproducible
  * Remove debug symbol packages from debian/control to work around dak bug
  * udeb: Add switch (DSA) drivers to nic-modules (Closes: #845075)
  * netfilter: Enable NFT_NUMGEN, NFT_QUOTA as modules
  * net/sched: Enable NET_ACT_TUNNEL_KEY, NET_IFE_SKBTCINDEX as modules
  * vsock: Enable VSOCKETS, VHOST_VSOCK, VIRTIO_VSOCKETS as modules
  * hci_uart: Enable BT_HCIUART_MRVL
  * rxrpc: Enable AF_RXRPC_IPV6
  * net: Enable NET_DEVLINK, MACSEC as modules
  * SCSI: Enable SCSI_SMARTPQI as module
  * target: Enable ISCSI_TARGET_CXGB4 as module
  * cxgb4: Enable CHELSIO_T4_FCOE
  * drm: Enable DRM_LEGACY; re-enable DRM_TDFX, DRM_R128, DRM_MGA, DRM_SIS,
    DRM_VIA, DRM_SAVAGE as modules for some architectures
  * 8250: Disable SERIAL_8250_LPSS, since it causes DW_DMAC_CORE to be built-in