@@ -33,8 +33,6 @@ Build-Depends:
  flex <!stage1 !pkg.linux.notools !nopython>,
  gcc-multilib [amd64 ppc64 s390x sparc64] <!stage1 !pkg.linux.notools !nopython>,
  libaudit-dev <!stage1 !pkg.linux.notools !nopython>,
- libbabeltrace-dev (>= 1.5.0) <!stage1 !pkg.linux.notools !nopython>,
- libbabeltrace-ctf-dev (>= 1.5.0) <!stage1 !pkg.linux.notools !nopython>,
  libdw-dev <!stage1 !pkg.linux.notools !nopython>,
  libelf-dev <!stage1 !pkg.linux.notools !nopython>,
  libiberty-dev <!stage1 !pkg.linux.notools !nopython>,
