@@ -6,6 +6,7 @@ linux (4.9.2-2~bpo8+1) UNRELEASED; urgency=medium
     - Revert changes to flex and asciidoc build-depdencies
     - linux-image-dbg: Revert changes to packaging of debug symbols, as new-
       style dbgsym packages are not properly supported in jessie-backports
+    - Revert "enable `perf data' support" as libbabeltrace is not available
 
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 24 Jan 2017 18:14:08 +0000
 
